GNOME Bugzilla – Bug 668965
Memory leak when parsing fails for a child element of a Canvas
Last modified: 2012-01-30 12:59:41 UTC
Created attachment 206366 [details] [review] add error handler to canvas GMarkupParser A GXPSCanvas struct is leaked when parsing fails for a child element of a Canvas. Example: <Canvas> <Canvas.RenderTransform> <invalid /> </Canvas.RenderTransform> </Canvas> Parsing is aborted when invalid data is encountered and cleanup code is not run. This adds a error handler to the canvas GMarkupParser to free the struct on error.
Review of attachment 206366 [details] [review]: Pushed! Thank you