Fixed memory leak when parsing fails for a child element of a Canvas

A GXPSCanvas struct is leaked when parsing fails for a child element
of a Canvas.  Parsing is aborted when invalid data is encountered and
cleanup code is not run.  This adds a error handler to the canvas
GMarkupParser to free the struct on error.

https://bugzilla.gnome.org/show_bug.cgi?id=668965